--- a/ListyCity/app/src/main/res/layout/content.xml
+++ b/ListyCity/app/src/main/res/layout/content.xml
@@ -7,5 +7,5 @@
     android:paddingStart="16dp"
     android:paddingEnd="16dp"
     android:textSize="36sp"
-    android:background="?android:attr/selectableItemBackground">
+    android:background="@drawable/list_item_selector">
 </TextView>
