--- a/ListyCity/app/src/main/res/values/colors.xml
+++ b/ListyCity/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="highlight_color">#DADADA</color>
+    <color name="pressed_color">#A39BBF</color>
 </resources>
