--- a/ListyCity/app/src/main/res/values/themes.xml
+++ b/ListyCity/app/src/main/res/values/themes.xml
@@ -2,7 +2,9 @@
     <!-- Base application theme. -->
     <style name="Theme.ListyCity"
         parent="Theme.Material3.DayNight.NoActionBar">
-
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowTranslucentStatus">false</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
 <!--        <item name="android:statusBarColor">@color/black</item>-->
 <!--        <item name="android:windowLightStatusBar">false</item>-->
 
